# pygpubench

./: CMakeLists.txt  README.md
.github/workflows/: gpu-test.yml  wheel.yml
ci/: modal_gpu_test.py
csrc/: binding.cpp  landlock.cpp  manager.cpp  manager.h  obfuscate.cpp  obfuscate.h
exploits/: benchmark.py  run_all.py  submission_combined.py  submission_correct.py  submission_error_counter.py  submission_fd_overwrite.py  submission_function_detour.py  submission_gc_copy.py  submission_gc_nan.py  submission_gpu_scan_zeros.py  submission_replace_torch.py  submission_thread_fd.py  submission_warmup.py  submission_wrong.py
python/pygpubench/: __init__.py  _types.py
test/: grayscale.py  grayscale_multi.py  submission_multi.py
